# thameswater-exporter

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  exporter.py  pyproject.toml  requirements.txt  test_data_retrieval.py  test_exporter.py  tw_readings.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  prune-docker-tags.yml
config/alloy/: config.alloy
config/mimir/: mimir.yaml
scripts/: prune_docker_sha_tags.py  test_api.py
src/thameswater_exporter/: __init__.py  __main__.py  collector.py  config.py  constants.py  health.py  main.py  readings.py  remote_write.py  state.py  tariff.py
tests/: test_collect_once.py  test_collector.py  test_config.py  test_data_retrieval.py  test_health.py  test_prune_docker_sha_tags.py  test_remote_write.py  test_state.py  test_tariff.py
