[tool.poetry]
name = "thameswater-exporter"
version = "0.1.0"
description = "Export Thames Water hourly smart-meter readings to Mimir via Prometheus remote_write"
authors = ["Barry Caruth"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
prometheus-remote-writer = "^1.1.3"
thameswaterapi = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^1.7.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
thameswater-exporter = "exporter:main"

[project.urls]
Homepage = "https://github.com/jelmer/thameswaterapi"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
