[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thameswater-exporter"
version = "1.4.2"
description = "Export Thames Water hourly smart-meter readings to Mimir via Prometheus remote_write"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Barry Caruth" }]
dependencies = [
    "prometheus-remote-writer>=1.1.3",
    "thameswaterapi>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "python-dotenv>=1.0", "mypy>=1.7"]

[project.scripts]
thameswater-exporter = "thameswater_exporter.main:main"

[project.urls]
Homepage = "https://github.com/hypercat-net/thameswater-exporter"
Repository = "https://github.com/hypercat-net/thameswater-exporter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
